<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AprenderInclusivo</string>
    <string name="exercicios">Exercícios</string>
    <string name="Jogos">Jogos</string>
    <string name="ajuda">Ajuda</string>
    <string name="caderno">caderno</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="preencher_espacos">Preencher Espaços</string>
    <string name="descobre_palavra">Descobre a Palavra</string>
    <string name="corresponder">Corresponder</string>
    <string name="jogo_da_memoria">Jogo da Memória</string>
    <string name="jogo_da_forca">Jogo da Forca</string>
    <string name="jogo_do_galo">Jogo do Galo</string>
    <string name="sopa_letras">Sopa de Letras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Animais">Animais</string>
    <string name="Frutas_Vegetais">Frutas/Vegetais</string>
    <string name="Cores">Cores</string>
    <string name="Bandeiras">Bandeiras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Ajuda">Ajuda</string>


</resources>