<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:fontFamily="@font/bouncy_love"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/header_text"
            android:textSize="90sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="170dp"
            android:layout_height="191dp"
            android:layout_marginTop="68dp"
            android:contentDescription="imagem lapis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/lapis"
            tools:ignore="HardcodedText,ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="imagem caderno"
            app:layout_constraintBottom_toTopOf="@+id/main_btn_ajuda"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.508"
            app:srcCompat="@drawable/caderno"
            tools:ignore="HardcodedText,ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="111dp"
            android:layout_height="244dp"
            android:contentDescription="imagem borracha"
            app:layout_constraintBottom_toTopOf="@+id/main_btn_ajuda"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/borracha"
            tools:ignore="HardcodedText,ImageContrastCheck" />

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="153dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TextSizeCheck">

            <Button
                android:id="@+id/main_btn_exercicios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/outer_black"
                android:fontFamily="@font/bouncy"
                android:gravity="center"
                android:text="@string/exercicios"
                android:textColor="@color/orange"
                android:textSize="60sp"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/main_btn_jogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/outer_black"
                android:fontFamily="@font/bouncy"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/Jogos"
                android:textColor="@color/orange"
                android:textSize="60sp"
                app:cornerRadius="10dp" />
        </LinearLayout>


        <Button
            android:id="@+id/main_btn_ajuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/outer_black"
            android:fontFamily="@font/bouncy"
            android:gravity="center_horizontal"
            android:text="@string/ajuda"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="70sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/main_btn_info"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="info"
                android:focusable="auto"
                app:srcCompat="@drawable/icon_info"
                tools:ignore="HardcodedText,KeyboardInaccessibleWidget,NestedWeights,SpeakableTextPresentCheck,VisualLintBounds" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                tools:ignore="VisualLintBounds" />

            <ImageView
                android:id="@+id/main_btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:baselineAlignBottom="true"
                android:clickable="true"
                android:contentDescription="settings"
                android:focusable="auto"
                app:srcCompat="@drawable/icon_settings"
                tools:ignore="HardcodedText,KeyboardInaccessibleWidget,SpeakableTextPresentCheck,VisualLintBounds" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>